--- a/src/less/global.less
+++ b/src/less/global.less
@@ -1,7 +1,8 @@
 .App {
-	width: 100vw;
+	display: flex;
+	flex-direction: column;
+	min-width: 98vw;
 	text-align: center;
-	// overflow-x: hidden;
 }
 
 #error-text {
